fixed -- placeholder not fullly visible for hours, minutes and restart after

--- a/assets/admin/css/editor.css
+++ b/assets/admin/css/editor.css
@@ -210,3 +210,8 @@
 	pointer-events: none;
 	touch-action: none;
 }
+.elementor-control-unit-2[data-setting="eael_evergreen_counter_hours"],
+.elementor-control-unit-2[data-setting="eael_evergreen_counter_minutes"],
+.elementor-control-unit-2[data-setting="eael_evergreen_counter_recurring_restart_after"] {
+	width: 70px;
+}
